Added bone meal effect for replant

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,5 @@
 config:
+  replant_effect:
+    enable: true
+    effect: BONE_MEAL_USE #https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
 regions:
