--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,4 +2,8 @@ config:
   replant_effect:
     enable: true
     effect: BONE_MEAL_USE #https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
+  guardian_effect:
+    enable: true
+    particle: ELECTRIC_SPARK
+    count: 1
 regions:
