--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ description: Create automatic farm regions for your players.
 load: POSTWORLD
 softdepend:
   - Multiverse-Core
+  - WorldGuard
 commands:
   fr:
     aliases: ["farmregion"]
