There was an issue with the Guardian saving system while disabling the plugin [git-Paper-794 (MC: 1.16.5)].
There was an issue while adding a new region "Profile name must not be null".

Added Nether wart as a new predefined type.

Added a new growth animation system, you can disable it through the config.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,11 @@
 config:
   worldguard: false
+  replant_animation_delay: 2 #In ticks, 0 to disable
   replant_effect:
     enable: true
-    effect: BONE_MEAL_USE #https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
+    effect: BONE_MEAL_USE #https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Effect.html
   guardian_effect:
     enable: true
-    particle: ELECTRIC_SPARK
+    particle: ELECTRIC_SPARK #https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
     count: 1
 regions:
