--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>rama.fr</groupId>
     <artifactId>FarmRegion</artifactId>
-    <version>1.5.5</version>
+    <version>1.5.6-DEV-2</version>
     <packaging>jar</packaging>
 
     <name>FarmRegion</name>
